# BareLog

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  flash.jlink  justfile
.github/workflows/: ci.yml
docs/: manifest.md
examples/flash/: main.c
examples/rtt/: main.c
examples/swo/: main.c
examples/uart_dma/: main.c
include/: blog.h  blog_config.h  blog_flash.h  blog_irq.h  blog_levels.h  blog_ringbuf.h  blog_rtos.h  blog_rtt.h  blog_swo.h  blog_timestamp.h  blog_uart.h
port/stm32f1/: system_stm32f10x.c  target.cmake
port/stm32f1/device/: stm32f10x.h  system_stm32f10x.h
port/stm32f1/include/: SEGGER_RTT_Conf.h  blog_uart_port.h
port/stm32f1/linker_scripts/: STM32F1_FLASH.ld.in
port/stm32f4/: target.cmake
port/stm32f4/include/: blog_flash_port.h  blog_uart_port.h
port/stm32f4/linker_scripts/: STM32F407VGTx_FLASH.ld  STM32F4_FLASH.ld.in
port/stm32f4/src/: blog_flash.c  blog_isr.c  blog_uart.c
src/: blog.c  blog_flash.c  blog_isr.c  blog_ringbuf.c  blog_rtos.c  blog_rtt.c  blog_swo.c  blog_timestamp.c  blog_uart.c  main.c  syscalls.c
tests/: CMakeLists.txt  mock_backend.c  test_concurrent.c  test_format.c  test_ringbuf.c
tools/: blog_flash_decode.py
